--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,19 @@
 asgiref==3.8.1
+cffi==1.17.1
+cryptography==43.0.3
 Django==5.1.4
 django-cors-headers==4.6.0
 djangorestframework==3.15.2
 drf-yasg==1.21.8
 inflection==0.5.1
+numpy==2.1.2
 packaging==24.2
+phe==1.5.0
 psycopg==3.2.3
+pycparser==2.22
 pytz==2024.2
 PyYAML==6.0.2
 sqlparse==0.5.3
+tenseal==0.3.15
 typing_extensions==4.12.2
 uritemplate==4.1.1
